--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <title>My Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Bootstrap Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
     <style>
         body {
@@ -14,48 +19,71 @@
         }
 
         .overlay {
-            background-color: rgba(0, 0, 0, 0.65);
+            background-color: rgba(0, 0, 0, 0.7);
             min-height: 100vh;
         }
 
         .section-padding {
-            padding: 80px 0;
+            padding: 90px 0;
         }
 
         .hero {
-            padding-top: 130px;
-            padding-bottom: 130px;
+            padding-top: 150px;
+            padding-bottom: 150px;
         }
 
+        /* Section titles */
+        h2 {
+            font-weight: 700;
+            letter-spacing: 1px;
+        }
+
+        /* Cards */
         .card {
-            background-color: rgba(255, 255, 255, 0.95);
-            color: black;
-            border-radius: 15px;
+            background: rgba(255, 255, 255, 0.95);
+            color: #000;
+            border-radius: 18px;
+            border: none;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
 
         .card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 15px 30px rgba(0,0,0,0.4);
+            transform: translateY(-12px);
+            box-shadow: 0 20px 40px rgba(0,0,0,0.4);
+        }
+
+        /* Profile image hover */
+        .profile-img {
+            transition: transform 0.3s ease;
+        }
+
+        .profile-img:hover {
+            transform: scale(1.05);
         }
 
         footer {
-            background-color: rgba(0, 0, 0, 0.9);
+            background-color: rgba(0, 0, 0, 0.95);
         }
     </style>
 </head>
+
 <body>
 
+<!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="#">MyPortfolio</a>
+        <a class="navbar-brand fw-bold" href="#">MyPortfolio</a>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+                <li class="nav-item"><a class="nav-link" href="#certifications">Certifications</a></li>
+                <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
                 <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
             </ul>
@@ -65,17 +93,21 @@
 
 <div class="overlay">
 
+<!-- HERO -->
 <section id="home" class="hero">
     <div class="container">
         <div class="row align-items-center">
             <div class="col-md-6 text-center text-md-start">
-                <h1 class="display-4">Hi, I'm John Paul 👋</h1>
-                <p class="lead">A Beginner Web Developer</p>
-                <a href="#projects" class="btn btn-light btn-lg mt-3">View My Work</a>
+                <h1 class="display-4 fw-bold">Hi, I'm John Paul 👋</h1>
+                <p class="lead">Beginner Web Developer & BSIT Student</p>
+                <a href="#projects" class="btn btn-primary btn-lg mt-3 px-4">
+                    View My Work
+                </a>
             </div>
+
             <div class="col-md-6 text-center">
                 <img src="image/profile.jpg"
-                     class="img-fluid rounded-circle border border-4 border-light"
+                     class="img-fluid rounded-circle border border-4 border-light profile-img"
                      style="max-width:300px;"
                      alt="Profile Image">
             </div>
@@ -83,32 +115,91 @@
     </div>
 </section>
 
+<!-- SERVICES -->
 <section id="services" class="section-padding">
     <div class="container">
         <h2 class="text-center mb-5">My Services</h2>
         <div class="row text-center g-4">
             <div class="col-md-4">
-                <div class="card p-4">
+                <div class="card p-4 h-100">
+                    <i class="bi bi-layout-text-window fs-1 text-primary mb-3"></i>
                     <h4>Web Design</h4>
-                    <p>Simple and clean website designs.</p>
+                    <p>Clean and simple website layouts with good user experience.</p>
                 </div>
             </div>
+
             <div class="col-md-4">
-                <div class="card p-4">
+                <div class="card p-4 h-100">
+                    <i class="bi bi-code-slash fs-1 text-primary mb-3"></i>
                     <h4>Frontend Development</h4>
-                    <p>Responsive layouts using Bootstrap.</p>
+                    <p>Responsive websites using HTML, CSS, and Bootstrap.</p>
                 </div>
             </div>
+
             <div class="col-md-4">
-                <div class="card p-4">
+                <div class="card p-4 h-100">
+                    <i class="bi bi-mortarboard fs-1 text-primary mb-3"></i>
                     <h4>Student Projects</h4>
-                    <p>Beginner-friendly web projects.</p>
+                    <p>Beginner-level projects for academic requirements.</p>
                 </div>
             </div>
         </div>
     </div>
 </section>
 
+<!-- CERTIFICATIONS -->
+<section id="certifications" class="section-padding">
+    <div class="container">
+        <h2 class="text-center mb-5">Certifications</h2>
+        <div class="row text-center g-4">
+            <div class="col-md-4">
+                <div class="card p-4 h-100">
+                    <i class="bi bi-award fs-1 text-primary mb-3"></i>
+                    <h5>Web Development Basics</h5>
+                    <p>HTML, CSS, and Bootstrap fundamentals</p>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card p-4 h-100">
+                    <i class="bi bi-shield-lock fs-1 text-primary mb-3"></i>
+                    <h5>Introduction to Cybersecurity</h5>
+                    <p>Basic security concepts and threats</p>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card p-4 h-100">
+                    <i class="bi bi-patch-check fs-1 text-primary mb-3"></i>
+                    <h5>IT Fundamentals</h5>
+                    <p>Computer systems and networking basics</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- EDUCATION -->
+<section id="education" class="section-padding">
+    <div class="container">
+        <h2 class="text-center mb-5">Education</h2>
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="card p-4 text-center">
+                    <h4>Bachelor of Science in Information Technology</h4>
+                    <p class="mb-1"><strong>University of Mindanao</strong></p>
+                    <p class="text-muted">2023 – Present</p>
+                    <p>
+                        Studying programming, web development,
+                        and core information technology concepts.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- PROJECTS -->
 <section id="projects" class="section-padding">
     <div class="container">
         <h2 class="text-center mb-5">My Projects</h2>
@@ -118,7 +209,7 @@
                     <img src="https://via.placeholder.com/400x250" class="card-img-top" alt="">
                     <div class="card-body text-center">
                         <h5>Login System</h5>
-                        <p>Simple login page.</p>
+                        <p>Simple login UI design project.</p>
                     </div>
                 </div>
             </div>
@@ -126,6 +217,7 @@
     </div>
 </section>
 
+<!-- CONTACT -->
 <section id="contact" class="section-padding">
     <div class="container">
         <h2 class="text-center mb-5">Contact Me</h2>
@@ -142,8 +234,17 @@
     </div>
 </section>
 
+<!-- FOOTER -->
 <footer class="text-center py-4">
-    <p class="mb-0">© 2026 John Paul | All Rights Reserved</p>
+    <div class="container">
+        <div class="mb-3">
+            <a href="#" class="text-white me-3 fs-4"><i class="bi bi-facebook"></i></a>
+            <a href="#" class="text-white me-3 fs-4"><i class="bi bi-github"></i></a>
+            <a href="#" class="text-white me-3 fs-4"><i class="bi bi-linkedin"></i></a>
+            <a href="#" class="text-white fs-4"><i class="bi bi-envelope-fill"></i></a>
+        </div>
+        <p class="mb-0">© 2026 John Paul | All Rights Reserved</p>
+    </div>
 </footer>
 
 </div>
